--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,8 @@
 {
-  "presets": [["env", {"modules": false}]],
+  presets: ['@babel/preset-env'],
   "env": {
     "test": {
-      "presets": [
-        ["env", { "targets": { "node": "current" }}]
-      ]
+      presets: ['@babel/preset-env']
     }
   }
 }
