--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src/**/*.*",
     "lint-fix": "prettier-eslint --write src/**/*.*",
     "precommit": "lint-staged",
-    "start": "webpack-serve --config webpack.config.js",
+    "start": "webpack-dev-server --config webpack.config.js --hot",
     "test": "jest"
   },
   "lint-staged": {
@@ -33,36 +33,35 @@
     "testURL": "http://localhost/"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.23",
-    "autoprefixer": "^9.0.1",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^23.4.0",
-    "babel-loader": "^7.1.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@vue/test-utils": "^1.0.0-beta.25",
+    "autoprefixer": "^9.1.5",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
-    "eslint": "^5.2.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint": "^5.6.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-vue": "^4.7.1",
-    "husky": "^1.0.0-rc.13",
-    "jest": "^23.4.1",
-    "lint-staged": "^7.2.0",
-    "node-sass": "^4.9.2",
-    "postcss-loader": "^2.1.6",
+    "husky": "^1.0.0-rc.15",
+    "jest": "^23.6.0",
+    "lint-staged": "^7.3.0",
+    "node-sass": "^4.9.3",
+    "postcss-loader": "^3.0.0",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
     "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
     "vue-jest": "^2.6.0",
-    "vue-loader": "^15.2.6",
+    "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-serve": "^2.0.2"
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
     "vue": "^2.5.17"
