--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "lint": "eslint src/**/*.*",
-    "lint-fix": "prettier-eslint --write src/**/*.*",
+    "format": "prettier-eslint --write src/**/*.*",
     "precommit": "lint-staged",
     "start": "webpack-dev-server --config webpack.config.js --hot",
+    "storybook": "start-storybook -p 6006 -c .storybook",
+    "build-storybook": "build-storybook",
     "test": "jest"
   },
   "lint-staged": {
@@ -33,35 +35,37 @@
     "testURL": "http://localhost/"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@storybook/vue": "^4.0.6",
     "@vue/test-utils": "^1.0.0-beta.25",
-    "autoprefixer": "^9.1.5",
+    "autoprefixer": "^9.3.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.2",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.6.0",
+    "babel-loader": "^8.0.4",
+    "babel-preset-vue": "^2.0.2",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-vue": "^4.7.1",
-    "husky": "^1.0.0-rc.15",
+    "husky": "^1.1.4",
     "jest": "^23.6.0",
-    "lint-staged": "^7.3.0",
-    "node-sass": "^4.9.3",
+    "lint-staged": "^8.0.4",
+    "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
     "sass-loader": "^7.0.3",
-    "style-loader": "^0.23.0",
-    "url-loader": "^1.1.1",
-    "vue-jest": "^2.6.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "vue-jest": "^3.0.0",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "vue": "^2.5.17"
